attendance management design update

--- a/dashboard.html
+++ b/dashboard.html
@@ -200,11 +200,24 @@
     <div class="grid grid-cols-1 md:grid-cols-1 gap-6 mt-10">
         <div class="w-full">
             <div class="overflow-x-auto shadow-lg bg-white rounded-md">
-                <div class="px-4 py-3 border-b border-gray-200">
-                    <h2 class="text-xl font-bold text-gray-900 mb-4">Monthly Expenses</h2>
+                <div class="px-6 py-4 border-b border-gray-200">
+                    <div class="flex items-center justify-between mb-4">
+                        <h2 class="text-2xl font-bold text-gray-900">Expenses Overview</h2>
+                        <div class="relative">
+                            <select id="chartToggle" class="appearance-none bg-white border border-gray-300 text-gray-700 py-2 px-4 pr-8 rounded-lg leading-tight focus:outline-none focus:bg-white focus:border-gray-500 shadow-sm">
+                                <option value="monthly">Monthly (This Year)</option>
+                                <option value="yearly">Last 5 Years</option>
+                            </select>
+                            <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                                <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                    <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
                     <p class="text-sm text-gray-500">You made 265 sales this month</p>
                 </div>
-                <div class="bg-white rounded-lg overflow-hidden p-4" style="height: 50vh; min-height: 300px;">
+                <div class="bg-white rounded-lg overflow-hidden p-6" style="height: 50vh; min-height: 300px;">
                     <canvas id="expenseChart"></canvas>
                 </div>
             </div>
