--- a/PrivateOpenHouse.html
+++ b/PrivateOpenHouse.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxe Real Estate</title>
+    <title>Private Open House</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -83,7 +83,7 @@
             position: absolute;
             height: 3px;
             width: 100%;
-            background: #0D9488;
+            background: #3B82F6;
             border-radius: 3px;
             opacity: 1;
             left: 0;
@@ -129,7 +129,7 @@
         }
 
         .hamburger.open span {
-            background: #0D9488;
+            background: #3B82F6;
         }
 
         .hamburger.open span:nth-child(1) {
@@ -198,7 +198,7 @@
             <div class="flex justify-between items-center">
                 <!-- Logo on the left -->
                 <div class="flex-shrink-0">
-                    <img src="/images/logo.png" alt="Luxe Real Estate Logo" class="h-12 w-auto">
+                    <img src="/images/logo1.png" alt="Luxe Real Estate Logo" class="h-12 w-auto">
                 </div>
     
                 <!-- Navigation links in the center -->
@@ -252,12 +252,12 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                 <!-- Left side content -->
                 <div class="w-full space-y-8 animate-on-scroll">
-                    <h1 class="text-6xl md:text-7xl lg:text-7xl font-bold leading-tight">
+                    <h1 class="text-6xl md:text-7xl font-bold leading-tight">
                         <span class="text-black whitespace-nowrap">Find your</span>
-                        <span class="block lg:inline-block">Dream Home</span>
-                        <span class="text-black block lg:inline-block lg:ml-2">Today</span>
+                        <span class=" text-black ">Dream Home</span>
+                        <span class="text-black">Today</span>
                     </h1>                    
-                    <p class="text-xl md:text-2xl text-gray-400">
+                    <p class="text-lg md:text-xl text-gray-400">
                         Search our inventory for homes you won't find anywhere else. 
                     </p>
     
@@ -720,7 +720,7 @@
                                 class="m-1 p-2 appearance-none text-gray-700 text-sm focus:outline-none border-none"
                                 placeholder="Enter your email" />
                             <button
-                                class="w-full p-2 text-sm font-semibold uppercase bg-yellow-500 rounded-lg lg:w-auto">
+                                class="w-full p-2 text-sm font-semibold uppercase bg-blue-500 text-white rounded-lg lg:w-auto">
                                 subscribe
                             </button>
                         </div>
