--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
 						class="p-2 rounded-full hover:bg-gray-100 transition-colors duration-200 lg:hidden">
 						<i class="fas" :class="sidebarOpen ? 'fa-times' : 'fa-bars'"></i>
 					</button>
+					<h1 class="text-2xl font-bold">Welcome, Admin</h1>
 				</div>
 				<div class="flex items-center space-x-4 ml-auto px-5">
 					<button class="p-2 rounded-full hover:bg-gray-100 transition-colors duration-200 relative">
