--- a/leave.html
+++ b/leave.html
@@ -272,8 +272,7 @@
                             <img :src="employee.image" :alt="employee.name" class="w-12 h-12 rounded-full mr-4">
                             <div>
                                 <h3 class="font-semibold text-lg" x-text="employee.name"></h3>
-                                <p class="text-sm text-gray-600">Total Leaves: <span
-                                        x-text="getTotalLeaves(employee.id)"></span></p>
+                                <p class="text-sm text-gray-600">Total Leaves: <span x-text="getTotalLeaves(employee.id)"></span></p>
                             </div>
                         </div>
                         <button @click="openApplyLeaveModal(employee)"
@@ -282,37 +281,29 @@
                         </button>
                     </div>
                     <div class="p-4">
-                        <h4 class="font-semibold mb-2">Leave Calendar</h4>
-                        <div class="grid grid-cols-6 sm:grid-cols-12 gap-1 mb-4">
-                            <template x-for="(month, index) in months">
-                                <div class="text-center relative">
-                                    <div class="text-xs font-semibold mb-1" x-text="month"></div>
-                                    <div class="bg-gray-200 rounded-full w-6 h-6 flex items-center justify-center text-xs"
-                                        x-text="leaveData[employee.id][index]"
-                                        x-tooltip="getMonthLeaves(employee.id, index).map(leave => `${formatDate(leave.startDate)} - ${formatDate(leave.endDate)} (${leave.type})`).join(', ')">
-                                    </div>
-                                </div>
-                            </template>
-                        </div>
                         <h4 class="font-semibold mb-2">Applied Leaves</h4>
                         <div class="space-y-2">
                             <template x-for="(leave, index) in appliedLeaves[employee.id]" :key="index">
-                                <div class="flex items-center justify-between">
+                                <div class="flex items-center justify-between" :class="{ 'line-through': leave.status === 'cancelled' }">
                                     <div :class="getLeaveColor(leave.type)"
                                         class="text-xs rounded-full px-3 py-1 inline-block mr-2 mb-2">
-                                        <span x-text="formatDate(leave.startDate)"></span> - <span
-                                            x-text="formatDate(leave.endDate)"></span>
+                                        <span x-text="formatDate(leave.startDate)"></span> - <span x-text="formatDate(leave.endDate)"></span>
                                         (<span x-text="leave.type"></span>)
+                                        <span x-show="leave.isNew" class="bg-yellow-300 text-yellow-800 px-1 rounded ml-1">New</span>
                                     </div>
-                                    <button @click="confirmCancelLeave(employee.id, index)"
-                                        class="text-red-500 hover:text-red-700 transition duration-300">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
-                                            fill="currentColor">
-                                            <path fill-rule="evenodd"
-                                                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                    </button>
+                                    <div class="flex items-center">
+                                        <button x-show="leave.status === 'pending'" @click="approveLeave(employee.id, index)"
+                                            class="text-green-500 hover:text-green-700 transition duration-300 mr-2">
+                                            <i class="fas fa-check"></i>
+                                        </button>
+                                        <button x-show="leave.status === 'pending'" @click="confirmCancelLeave(employee.id, index)"
+                                            class="text-red-500 hover:text-red-700 transition duration-300">
+                                            <i class="fas fa-times"></i>
+                                        </button>
+                                        <span x-show="leave.status === 'approved'" class="text-green-500">
+                                            <i class="fas fa-check-circle"></i>
+                                        </span>
+                                    </div>
                                 </div>
                             </template>
                         </div>
