--- a/Password.html
+++ b/Password.html
@@ -7,49 +7,55 @@
     <title>Private Open House</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
 
-<body class="bg-white">
+<body>
     <div class="min-h-screen flex items-center justify-center p-4">
-        <div class="bg-white rounded-lg p-8 w-full max-w-lg">
-            <h1
-                class="text-4xl md:text-5xl font-bold mb-4 text-gray-800 bg-clip-text text-transparent bg-gradient-to-r from-blue-600 to-indigo-600">
+        <div class="bg-white rounded-2xl p-8 w-full max-w-md">
+            <h1 class="text-4xl md:text-5xl font-bold mb-4 text-gray-800 bg-clip-text text-transparent bg-gradient-to-r from-blue-600 to-indigo-600">
                 Welcome back
             </h1>
-            <p class="text-gray-500 mb-8 text-sm">
-                Signing in as <span class="underline">maxivicky143@gmail.com</span>
+            <p class="text-gray-600 mb-8 text-sm">
+                Signing in as <span class="font-medium text-blue-600">maxivicky143@gmail.com</span>
             </p>
-              
 
-            <div class="space-y-2">
-                <form id="authForm" class="space-y-4">
-                    <div>
-                        <div class="relative mb-2">
-                            <label for="password" class="block text-sm font-medium text-gray-700 mb-1">
-                              Password
-                              <span class="absolute borrom-3 left-16 text-red-500">*</span>
-                            </label>
-                            <p class="text-gray-400">
-                                Your password must be 5 to 128 characters long
-                            </p>
-                          </div>
-                        <input type="email" id="email" name="email"
-                            class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm mb-3 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200"
-                            placeholder="you@example.com" required>
-                        <p id="emailError" class="mt-1 text-red-500 text-xs hidden">Please enter a valid email address.
+            <form id="authForm" class="space-y-6">
+                <div>
+                    <div class="relative mb-2">
+                        <label for="password" class="block text-sm font-medium text-gray-700 mb-1">
+                            Password
+                            <span class="text-red-500 ml-1">*</span>
+                        </label>
+                        <p class="text-gray-500 text-xs">
+                            Your password must be 5 to 128 characters long
                         </p>
                     </div>
-                    <button type="submit" id="submitButton"
-                        class="w-full flex justify-center py-4 px-4 mb-4 border border-transparent rounded-xl shadow-sm text-sm font-medium text-white bg-gradient-to-r from-blue-600 to-indigo-600 hover:from-blue-700 hover:to-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed transition duration-200"
-                        disabled>
-                            Confirm
-                    </button>
-                    <div class="mt-6 text-center">
-                        <a class="text-sm text-blue-600 mt-4 hover:text-blue-800" href="reset-password.html">
-                            Forgot your password?
-                        </a>
+                    <div class="relative">
+                        <input type="password" id="password" name="password"
+                            class="w-full px-4 py-3 border-2 border-gray-300 rounded-xl shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200"
+                            placeholder="Enter your password" required>
+                        <button type="button" class="absolute inset-y-0 right-0 pr-3 flex items-center text-gray-400 hover:text-gray-600">
+                            <i class="fas fa-eye"></i>
+                        </button>
                     </div>
-                </form>
+                    <p id="passwordError" class="mt-2 text-red-500 text-sm hidden">Please enter a valid password.</p>
+                </div>
+                <button type="submit" id="submitButton"
+                    class="w-full flex justify-center py-4 px-4 border border-transparent rounded-xl shadow-md text-base font-semibold text-white bg-gradient-to-r from-blue-600 to-indigo-600 hover:from-blue-700 hover:to-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed transition duration-200 transform hover:-translate-y-0.5">
+                    Confirm
+                </button>
+            </form>
+
+            <div class="mt-8 text-center">
+                <a class="text-sm text-blue-600 hover:text-blue-800 font-medium transition duration-200" href="reset-password.html">
+                    Forgot your password?
+                </a>
             </div>
         </div>
     </div>
