--- a/reset-password.html
+++ b/reset-password.html
@@ -7,34 +7,45 @@
     <title>Private Open House</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
 
 <body class="bg-white">
     <div class="min-h-screen flex items-center justify-center p-4">
-        <div class="bg-white rounded-lg p-8 w-full max-w-lg">
-            <h1
-                class="text-4xl md:text-5xl font-bold mb-2 text-gray-800 bg-clip-text text-transparent bg-gradient-to-r from-blue-600 to-indigo-600">
-                Trouble logging in?</h1>
-            <p class="text-gray-500 mb-8 text-sm">
-                Enter your email and we'll send a link to reset your password.
+        <div class="bg-white rounded-2xl p-8 w-full max-w-md ">
+            <h1 class="text-4xl md:text-5xl font-bold mb-4 text-gray-800 bg-clip-text text-transparent bg-gradient-to-r from-blue-600 to-indigo-600">
+                Trouble logging in?
+            </h1>
+            <p class="text-gray-600 mb-8 text-base leading-relaxed">
+                Enter your password and we'll send a link to reset your password.
             </p>
 
-            <div class="space-y-4">
-                <form id="authForm" class="space-y-4">
-                    <div>
-                        <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
+            <form id="authForm" class="space-y-6">
+                <div>
+                    <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
+                    <div class="relative">
                         <input type="password" id="password" name="password"
-                            class="w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200"
-                            placeholder="*****" required>
-                        <p id="password" class="mt-1 text-red-500 text-xs hidden">Please enter a valid email address.
-                        </p>
+                            class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200"
+                            placeholder="Enter your password" required>
+                        <i class="fas fa-eye absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 cursor-pointer hover:text-gray-600 transition duration-200"></i>
                     </div>
-                    <button type="submit" id="submitButton"
-                        class="w-full flex justify-center py-4 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-gradient-to-r from-blue-600 to-indigo-600 hover:from-blue-700 hover:to-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed transition duration-200"
-                        disabled>
-                        Send Reset Link
-                    </button>
-                </form>
+                    <p id="password-error" class="mt-2 text-red-500 text-sm hidden">Please enter a valid password.</p>
+                </div>
+                <button type="submit" id="submitButton"
+                    class="w-full flex justify-center py-4 px-4 border border-transparent rounded-lg shadow-md text-base font-semibold text-white bg-gradient-to-r from-blue-600 to-indigo-600 hover:from-blue-700 hover:to-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed transition duration-200 transform hover:-translate-y-0.5">
+                    Send Reset Link
+                </button>
+            </form>
+
+            <div class="mt-8 text-center">
+                <a href="signIn.html" class="text-blue-600 hover:text-blue-800 font-medium transition duration-200">
+                    Back to Login
+                </a>
             </div>
         </div>
     </div>
