--- a/signIn.html
+++ b/signIn.html
@@ -6,23 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Private Open House</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+    </style>
 </head>
 
 <body class="bg-white">
-    <div class="min-h-screen flex items-center justify-center p-4">
-        <div class="bg-white rounded-lg p-8 w-full max-w-lg">
-            <h1 class="text-3xl md:text-4xl font-bold mb-2 text-gray-800">Sign in or create an account</h1>
-            <p class="text-gray-400 mb-8 text-sm leading-6">
-                By clicking “Continue,” you agree to PrivateOpenDoor and its affiliates’ 
-                <a href="#" class="text-blue-600 underline hover:underline">Terms of Service</a> and
-                <a href="#" class="text-blue-600 underline hover:underline">Privacy Policy</a>.
+    <div class="min-h-screen flex items-center justify-center p-6">
+        <div class="w-full max-w-md">
+            <h1 class="text-5xl font-bold mb-6 text-gray-900 leading-tight">Sign in or create an account</h1>
+            <p class="text-gray-600 mb-10 text-sm leading-relaxed">
+                By clicking "Continue," you agree to PrivateOpenDoor and its affiliates' 
+                <a href="#" class="text-blue-600 hover:text-blue-800 font-semibold">Terms of Service</a> and
+                <a href="#" class="text-blue-600 hover:text-blue-800 font-semibold">Privacy Policy</a>.
             </p>
             
-            <div class="space-y-4">
+            <div class="space-y-6">
                 <a href="#"
-                    class="flex items-center justify-center w-full py-3 px-4 mb-10 font-semibold text-gray-700 transition-all duration-300 ease-in-out bg-white border border-gray-300 rounded-lg shadow-sm hover:shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                    <svg class="w-5 h-5 mr-3" viewBox="0 0 24 24">
+                    class="flex items-center justify-center w-full py-4 px-6 text-lg font-semibold text-gray-700 bg-gray-100 rounded-xl shadow-lg hover:shadow-xl transition duration-300 ease-in-out transform hover:-translate-y-1">
+                    <svg class="w-6 h-6 mr-3" viewBox="0 0 24 24">
                         <path fill="#4285F4"
                             d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
                         <path fill="#34A853"
@@ -35,28 +40,28 @@
                     Sign in with Google
                 </a>
 
-                <div class="flex items-center">
-                    <div class="flex-grow border-t border-gray-300"></div>
-                    <span class="flex-shrink mx-4 text-gray-500">or</span>
-                    <div class="flex-grow border-t border-gray-300"></div>
+                <div class="flex items-center my-10">
+                    <div class="flex-grow border-t-2 border-gray-200"></div>
+                    <span class="flex-shrink mx-4 text-gray-500 text-lg font-semibold">or</span>
+                    <div class="flex-grow border-t-2 border-gray-200"></div>
                 </div>
 
-                <form id="authForm" class="space-y-4">
+                <form id="authForm" class="space-y-6">
                     <div>
-                        <label for="email" class="block text-sm font-medium text-gray-700 mb-2 mt-10">Email address</label>
+                        <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">Email address</label>
                         <input type="email" id="email" name="email"
-                            class="w-full px-3 py-3 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500"
+                            class="w-full px-6 py-4 text-lg border-2 border-gray-300 rounded-xl shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-300 ease-in-out"
                             placeholder="you@example.com" required>
                     </div>
                     <button type="submit" id="submitButton"
-                        class="w-full flex justify-center py-4 px-4 border border-transparent rounded-xl shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+                        class="w-full flex justify-center py-4 px-6 border border-transparent rounded-xl shadow-lg text-lg font-semibold text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 transition duration-300 ease-in-out transform hover:-translate-y-1 disabled:opacity-50 disabled:cursor-not-allowed">
                         Continue with email
                     </button>
                 </form>
             </div>
 
-            <div class="mt-6 text-center">
-                <a class="text-sm text-blue-600 hover:text-blue-800" href="reset-password.html">
+            <div class="mt-10 text-center">
+                <a class="text-base text-blue-600 hover:text-blue-800 font-semibold transition duration-300 ease-in-out" href="reset-password.html">
                     Forgot your password?
                 </a>
             </div>
