--- a/PrivateOpenHouse.html
+++ b/PrivateOpenHouse.html
@@ -319,7 +319,7 @@
 
 <body class="text-gray-800">
     <nav id="navbar" class="py-6 fixed top-0 left-0 right-0 z-10 transition-all duration-300 bg-white shadow-xl">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="container mx-auto">
             <div class="flex justify-between items-center">
                 <!-- Logo on the left -->
                 <div class="flex-shrink-0">
@@ -860,6 +860,75 @@
         </div>
     </section>
 
+    <section class="relative overflow-hidden bg-gradient-to-br from-gray-100 to-gray-200">
+        <div class="floating-shape w-48 h-48 top-10 right-10"></div>
+        <div class="floating-shape w-64 h-64 bottom-10 left-10" style="animation-delay: -3s;"></div>
+        <div class="container mx-auto py-10 md:py-10 px-4 sm:px-6 lg:px-8">
+            <h2 class="text-3xl font-bold text-center mb-8 text-gray-800">Recent Properties</h2>
+            <div>
+                <div class="flex flex-col md:flex-row justify-center items-center gap-8">
+                    <!-- Card 1 -->
+                    <div class="property-card animate-on-scroll group relative w-80 h-96 rounded-2xl overflow-hidden shadow-2xl transition-all duration-500 hover:scale-105">
+                        <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
+                             style="background-image: url('https://img.freepik.com/free-photo/interior-decoration-inspired-by-mexican-folklore_23-2150711319.jpg?uid=R75331262&ga=GA1.1.1292211247.1718182866&semt=ais_user');">
+                        </div>
+                        <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent">
+                            <div class="absolute bottom-0 left-0 right-0 p-6">
+                                <h3 class="text-3xl font-bold text-white mb-2 tracking-wide">Exquisite Luxury Villa</h3>
+                                <p class="text-lg text-gray-200">Malibu, California</p>
+                                <div class="flex justify-between items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                    <span class="text-2xl font-semibold text-white">$12,500,000</span>
+                                    <a href="#" class="inline-block bg-blue-400 text-white px-4 py-2 rounded-xl font-bold text-lg hover:bg-blue-500 hover:text-white transition-colors duration-300">View Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="absolute top-4 right-4 bg-blue-400 text-white px-4 py-1 rounded-xl font-semibold">
+                            Featured
+                        </div>
+                    </div>
+                    <!-- Card 2 -->
+                    <div class="property-card animate-on-scroll group relative w-80 h-96 rounded-2xl overflow-hidden shadow-2xl transition-all duration-500 hover:scale-105">
+                        <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
+                             style="background-image: url('https://img.freepik.com/free-photo/interior-decoration-inspired-by-mexican-folklore_23-2150711319.jpg?uid=R75331262&ga=GA1.1.1292211247.1718182866&semt=ais_user');">
+                        </div>
+                        <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent">
+                            <div class="absolute bottom-0 left-0 right-0 p-6">
+                                <h3 class="text-3xl font-bold text-white mb-2 tracking-wide">Exquisite Luxury Villa</h3>
+                                <p class="text-lg text-gray-200">Malibu, California</p>
+                                <div class="flex justify-between items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                    <span class="text-2xl font-semibold text-white">$12,500,000</span>
+                                    <a href="#" class="inline-block bg-blue-400 text-white px-4 py-2 rounded-xl font-bold text-lg hover:bg-blue-500 hover:text-white transition-colors duration-300">View Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="absolute top-4 right-4 bg-blue-500 text-white px-4 py-1 rounded-xl font-semibold">
+                            Featured
+                        </div>
+                    </div>
+    
+                    <!-- Card 3 -->
+                    <div class="property-card animate-on-scroll group relative w-80 h-96 rounded-2xl overflow-hidden shadow-2xl transition-all duration-500 hover:scale-105">
+                        <div class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-110"
+                             style="background-image: url('https://img.freepik.com/free-photo/interior-decoration-inspired-by-mexican-folklore_23-2150711319.jpg?uid=R75331262&ga=GA1.1.1292211247.1718182866&semt=ais_user');">
+                        </div>
+                        <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent">
+                            <div class="absolute bottom-0 left-0 right-0 p-6">
+                                <h3 class="text-3xl font-bold text-white mb-2 tracking-wide">Exquisite Luxury Villa</h3>
+                                <p class="text-lg text-gray-200">Malibu, California</p>
+                                <div class="flex justify-between items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                                    <span class="text-2xl font-semibold text-white">$12,500,000</span>
+                                    <a href="#" class="inline-block bg-blue-400 text-white px-4 py-2 rounded-xl font-bold text-lg hover:bg-blue-500 hover:text-white transition-colors duration-300">View Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="absolute top-4 right-4 bg-blue-500 text-white px-4 py-1 rounded-xl font-semibold">
+                            Featured
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- <section class="min-h-screen relative overflow-hidden pt-24">
         <div class="floating-shape w-64 h-64 top-10 left-10"></div>
