property details page and listing page and agent list page change to light theme and update the design

--- a/PrivateOpenHouse.html
+++ b/PrivateOpenHouse.html
@@ -346,7 +346,7 @@
                         <span
                             class="absolute bottom-0 left-0 w-full h-0.5 bg-blue-600 transform scale-x-0 group-hover:scale-x-100 transition-transform duration-300 ease-in-out"></span>
                     </a>
-                    <a href="#"
+                    <a href="aboutus.html"
                         class="nav-link text-gray-800 px-3 py-2 rounded-md transition-all duration-300 ease-in-out transform hover:text-blue-600 relative group">
                         About
                         <span
