--- a/employees.html
+++ b/employees.html
@@ -257,7 +257,9 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
         <!-- Team Member 1 -->
         <div class="bg-white rounded-lg shadow-md p-6 my-6 text-center">
-            <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full rounded-full mb-4">
+            <div class="relative w-32 h-32 mx-auto mb-4">
+                <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+            </div>
             <h3 class="text-xl font-semibold mb-2">John Doe</h3>
             <ul
                 class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
@@ -281,7 +283,9 @@
 
         <!-- Team Member 2 -->
         <div class="bg-white rounded-lg shadow-md p-6 my-6 text-center">
-            <img src="https://spacema-dev.com/elevate/assets/images/team/4.jpg" alt="Team Member 2" class="w-full rounded-full mb-4">
+            <div class="relative w-32 h-32 mx-auto mb-4">
+                <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+            </div>
             <h3 class="text-xl font-semibold mb-2">Jane Smith</h3>
             <ul
                 class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
@@ -305,7 +309,9 @@
 
         <!-- Team Member 3 -->
         <div class="bg-white rounded-lg shadow-md p-6 my-6 text-center">
-            <img src="https://spacema-dev.com/elevate/assets/images/team/3.jpg" alt="Team Member 3" class="w-full rounded-full mb-4">
+            <div class="relative w-32 h-32 mx-auto mb-4">
+                <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+            </div>
             <h3 class="text-xl font-semibold mb-2">Alex Johnson</h3>
             <ul
                 class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
@@ -329,7 +335,9 @@
 
         <!-- Team Member 4 -->
         <div class="bg-white rounded-lg shadow-md p-6 my-6 text-center">
-            <img src="https://spacema-dev.com/elevate/assets/images/team/2.jpg" alt="Team Member 4" class="w-full rounded-full mb-4">
+            <div class="relative w-32 h-32 mx-auto mb-4">
+                <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+            </div>
             <h3 class="text-xl font-semibold mb-2">Peter Johnson</h3>
             <ul
                 class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
@@ -353,7 +361,9 @@
 
         <!-- Team Member 5 -->
         <div class="bg-white rounded-lg shadow-md p-6 my-6 text-center">
-            <img src="https://spacema-dev.com/elevate/assets/images/team/5.jpg" alt="Team Member 5" class="w-full rounded-full mb-4">
+            <div class="relative w-32 h-32 mx-auto mb-4">
+                <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+            </div>
             <h3 class="text-xl font-semibold mb-2">Emily Brown</h3>
             <ul
                 class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
@@ -377,7 +387,9 @@
 
         <!-- Team Member 6 -->
         <div class="bg-white rounded-lg shadow-md p-6 my-6 text-center">
-            <img src="https://spacema-dev.com/elevate/assets/images/team/6.jpg" alt="Team Member 6" class="w-full rounded-full mb-4">
+            <div class="relative w-32 h-32 mx-auto mb-4">
+                <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+            </div>
             <h3 class="text-xl font-semibold mb-2">Michael Davis</h3>
             <ul
                 class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
@@ -401,7 +413,9 @@
 
         <!-- Team Member 7 -->
         <div class="bg-white rounded-lg shadow-md p-6 my-6 text-center">
-            <img src="https://spacema-dev.com/elevate/assets/images/team/7.jpg" alt="Team Member 7" class="w-full rounded-full mb-4">
+            <div class="relative w-32 h-32 mx-auto mb-4">
+                <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+            </div>
             <h3 class="text-xl font-semibold mb-2">Sarah Johnson</h3>
             <ul
                 class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
@@ -425,7 +439,9 @@
 
         <!-- Team Member 8 -->
         <div class="bg-white rounded-lg shadow-md p-6 my-6 text-center">
-            <img src="https://spacema-dev.com/elevate/assets/images/team/8.jpg" alt="Team Member 8" class="w-full rounded-full mb-4">
+            <div class="relative w-32 h-32 mx-auto mb-4">
+                <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+            </div>
             <h3 class="text-xl font-semibold mb-2">David Wilson</h3>
             <ul
                 class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
