--- a/customers.html
+++ b/customers.html
@@ -66,9 +66,9 @@
                 <div class="relative mx-auto w-36 rounded-full">
                     <span
                         class="absolute right-0 m-3 h-3 w-3 rounded-full bg-green-500 ring-2 ring-green-300 ring-offset-2"></span>
-                    <img class="mx-auto h-auto w-full rounded-full"
-                        src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80"
-                        alt="" />
+                        <div class="relative w-32 h-32 mx-auto mb-4">
+                            <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+                        </div>
                 </div>
                 <h1 class="my-1 text-center text-xl font-bold leading-8 text-gray-900">Michael Simbal</h1>
                 <ul
@@ -97,9 +97,40 @@
                 <div class="relative mx-auto w-36 rounded-full">
                     <span
                         class="absolute right-0 m-3 h-3 w-3 rounded-full bg-green-500 ring-2 ring-green-300 ring-offset-2"></span>
-                    <img class="mx-auto h-auto w-full rounded-full"
-                        src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80"
-                        alt="" />
+                        <div class="relative w-32 h-32 mx-auto mb-4">
+                            <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+                        </div>
+                </div>
+                <h1 class="my-1 text-center text-xl font-bold leading-8 text-gray-900 truncate">Vel Tech Rangarajan Dr.Sagunthala R&D Institute of Science and Technology</h1>
+                <ul
+                    class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
+                    <li class="flex items-center py-3 text-sm">
+                        <span>Status</span>
+                        <span class="ml-auto"><span
+                                class="rounded-full bg-green-200 py-1 px-2 text-xs font-medium text-green-700">Open for
+                                side gigs</span></span>
+                    </li>
+                    <li class="flex items-center py-3 text-sm">
+                        <span>Role</span>
+                        <span class="ml-auto"><span
+                                class="rounded-full bg-green-200 py-1 px-2 text-xs font-medium text-green-700">Software Developer</span></span>
+                    </li>
+                    <li class="flex items-center py-3 text-sm">
+                        <span>Joined On</span>
+                        <span class="ml-auto">Apr 08, 2022</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="max-w-sm">
+            <div class="rounded-lg border bg-white px-4 pt-8 pb-10 shadow-lg">
+                <div class="relative mx-auto w-36 rounded-full">
+                    <span
+                        class="absolute right-0 m-3 h-3 w-3 rounded-full bg-green-500 ring-2 ring-green-300 ring-offset-2"></span>
+                        <div class="relative w-32 h-32 mx-auto mb-4">
+                            <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+                        </div>
                 </div>
                 <h1 class="my-1 text-center text-xl font-bold leading-8 text-gray-900">Michael Simbal</h1>
                 <ul
@@ -128,9 +159,9 @@
                 <div class="relative mx-auto w-36 rounded-full">
                     <span
                         class="absolute right-0 m-3 h-3 w-3 rounded-full bg-green-500 ring-2 ring-green-300 ring-offset-2"></span>
-                    <img class="mx-auto h-auto w-full rounded-full"
-                        src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80"
-                        alt="" />
+                        <div class="relative w-32 h-32 mx-auto mb-4">
+                            <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+                        </div>
                 </div>
                 <h1 class="my-1 text-center text-xl font-bold leading-8 text-gray-900">Michael Simbal</h1>
                 <ul
@@ -159,40 +190,9 @@
                 <div class="relative mx-auto w-36 rounded-full">
                     <span
                         class="absolute right-0 m-3 h-3 w-3 rounded-full bg-green-500 ring-2 ring-green-300 ring-offset-2"></span>
-                    <img class="mx-auto h-auto w-full rounded-full"
-                        src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80"
-                        alt="" />
-                </div>
-                <h1 class="my-1 text-center text-xl font-bold leading-8 text-gray-900">Michael Simbal</h1>
-                <ul
-                    class="mt-3 divide-y rounded bg-gray-100 py-2 px-3 text-gray-600 shadow-sm hover:text-gray-700 hover:shadow">
-                    <li class="flex items-center py-3 text-sm">
-                        <span>Status</span>
-                        <span class="ml-auto"><span
-                                class="rounded-full bg-green-200 py-1 px-2 text-xs font-medium text-green-700">Open for
-                                side gigs</span></span>
-                    </li>
-                    <li class="flex items-center py-3 text-sm">
-                        <span>Role</span>
-                        <span class="ml-auto"><span
-                                class="rounded-full bg-green-200 py-1 px-2 text-xs font-medium text-green-700">Software Developer</span></span>
-                    </li>
-                    <li class="flex items-center py-3 text-sm">
-                        <span>Joined On</span>
-                        <span class="ml-auto">Apr 08, 2022</span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="max-w-sm">
-            <div class="rounded-lg border bg-white px-4 pt-8 pb-10 shadow-lg">
-                <div class="relative mx-auto w-36 rounded-full">
-                    <span
-                        class="absolute right-0 m-3 h-3 w-3 rounded-full bg-green-500 ring-2 ring-green-300 ring-offset-2"></span>
-                    <img class="mx-auto h-auto w-full rounded-full"
-                        src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80"
-                        alt="" />
+                        <div class="relative w-32 h-32 mx-auto mb-4">
+                            <img src="https://spacema-dev.com/elevate/assets/images/team/1.jpg" alt="Team Member 1" class="w-full h-full object-cover rounded-full">
+                        </div>
                 </div>
                 <h1 class="my-1 text-center text-xl font-bold leading-8 text-gray-900">Michael Simbal</h1>
                 <ul
